refactor: extract s3 logic info dedicated S3Service