@@ -3,30 +3,21 @@ package graduate.req_server.domain.image.service;
 import graduate.req_server.domain.image.dto.request.ImageRequest;
 import graduate.req_server.util.client.ai.AiClient;
 import graduate.req_server.util.client.ai.dto.UploadResponse;
+import graduate.req_server.util.client.s3.S3Service;
 import graduate.req_server.util.file.MultipartUtils;
-import java.io.IOException;
-import java.io.InputStream;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
-import software.amazon.awssdk.core.sync.RequestBody;
-import software.amazon.awssdk.services.s3.S3Client;
-import software.amazon.awssdk.services.s3.model.PutObjectRequest;
 
 @Slf4j
 @Service
 @RequiredArgsConstructor
 public class ImageService {
 
-    private final S3Client s3Client;
+    private final S3Service s3Service;
     private final AiClient aiClient;
-
-    @Value("${spring.cloud.aws.s3.bucket}")
-    private String bucket;
 
     public UploadResponse uploadAndProcess(ImageRequest request) {
         log.debug("[ImageService] uploadAndProcess");
@@ -34,25 +25,11 @@ public class ImageService {
         List<MultipartFile> files = request.getFiles();
         MultipartUtils.validateFiles(files);
 
-        List<String> ids = files.stream().map(file -> {
-            String ext = MultipartUtils.getExtension(file.getOriginalFilename());
-            String id = java.util.UUID.randomUUID().toString();
-            String key = "images/" + id + ext;
-            try (InputStream is = file.getInputStream()) {
-                s3Client.putObject(
-                        PutObjectRequest.builder()
-                                .bucket(bucket)
-                                .key(key)
-                                .build(),
-                        RequestBody.fromInputStream(is, file.getSize())
-                );
-            } catch (IOException e) {
-                //TODO Error
-            }
-            return id + ext;
-        }).collect(Collectors.toList());
+        List<String> keys = files.stream()
+                .map(s3Service::uploadFile)
+                .toList();
 
         // AI 처리
-        return aiClient.vectorizeAndStore(ids);
+        return aiClient.vectorizeAndStore(keys);
     }
 }
